Update 1-4. 프로그래밍 코드 최적화(02.04).md

--- a/RAP/1-4. 프로그래밍 코드 최적화(02.04).md
+++ b/RAP/1-4. 프로그래밍 코드 최적화(02.04).md
@@ -17,3 +17,130 @@
 ### 실습 1
 - `\` 붙이면 그대로 출력
 - Aggregation Binding 실습
+</br>
+
+- Main.controller.js
+```java
+sap.ui.define([
+    "sap/ui/core/mvc/Controller",
+    "sap/ui/model/json/JSONModel"   // 사용할 라이브러리 추가
+], (Controller, JSONModel) => {
+    "use strict";
+
+    return Controller.extend("test1.controller.Main", {
+        onInit() {
+            let oModel = this.getOwnerComponent().getModel(); // 기본 (빈문자열) 모델을 가져옴
+            let oMainModel = this.getOwnerComponent().getModel("main"); // main 모델을 가져옴
+
+            // 해당 라인에서 디버깅이 실행됨. 단, 개발자도구가 켜져있는 상태여야 함
+            // debugger; 
+
+            let oData = {
+                name : { 
+                    FirstName : "홍", 
+                    LastName : "길동"
+                 },
+                age : 30,
+                salary : "4000만원",
+                list : [
+                    { ProductNo : "P001", ProdectName : "책상", price : 10000 },
+                    { ProductNo : "P002", ProdectName : "키보드", price : 5000 },
+                    { ProductNo : "P003", ProdectName : "물티슈", price : 1000 },
+                    { ProductNo : "P004", ProdectName : "의자", price :30000 }
+                ]
+            };
+            let oJSONModel = new JSONModel(oData);
+            // 모델 이름 생략 시 빈 문자열
+            // 기존에 기본모델이 존재한다면 해당 모델을 덮어씀
+            // 따라서 모델 이름을 부여해서 각 모델을 구분할 수 있도록 함
+            // this.getView().setModel(모델객체, 모델이름); 
+            this.getView().setModel(oJSONModel, "view"); 
+
+            // 모델에 들어있는 데이터를 화면에 표시하기 위해서
+            // "바인딩(Binding)" 이라는 것을 사용
+            // 기본 문법
+            // <tag name="{모델이름>/경로}" />  모델 이름이 있는 경우
+            // <tag name="{/경로}" />           모델 이름이 없는 경우(기본)
+            // 경로는 JSON 객체의 key 값으로 접근
+            // => {모델이름>/key1/key2} 와 같이 하위로 내려갈 수 있음
+        }
+    });
+});
+```
+
+- Main.view.xml
+```html
+<mvc:View controllerName="test1.controller.Main"
+    xmlns:mvc="sap.ui.core.mvc"
+    xmlns:core="sap.ui.core"
+    xmlns:l = "sap.ui.layout"
+    xmlns="sap.m">
+    <Page id="page" title="{i18n>title}">
+        <l:Grid containerQuery="true" 
+                class="sapUiSmallMargin"
+                defaultSpan="XL3 L4 M4 S12">
+                <Input value="{view>/name/FirstName}" description="\{view>/name/FirstName}"/>
+                <Input value="{view>/name/LastName}" description="\{view>/name/LastName}"/>
+                <Input value="{view>/age}" description="\{view>/age}"/>
+                <Input value="{view>/salary}" description="\{view>/salary}"/>
+        </l:Grid>
+
+        <!-- sap.m.table 추가 -->
+        <Table id="idProductsTable"
+            inset="false"
+            items="{view>/list}">
+            <headerToolbar>
+                <OverflowToolbar>
+                    <content>
+                        <Title text="Products" level="H2"/>
+                        <ToolbarSpacer />
+                        <ComboBox id="idPopinLayout"
+                            placeholder="Popin layout options"
+                            change="onPopinLayoutChanged">
+                            <items>
+                                <core:Item  text="Block"
+                                    key="Block"/>
+                                <core:Item  text="Grid Large"
+                                    key="GridLarge"/>
+                                <core:Item  text="Grid Small"
+                                    key="GridSmall"/>
+                            </items>
+                        </ComboBox>
+                        <Label text="Sticky options:" />
+                        <CheckBox text="ColumnHeaders"
+                            select="onSelect"/>
+                        <CheckBox text="HeaderToolbar"
+                            select="onSelect"/>
+                        <CheckBox text="InfoToolbar"
+                            select="onSelect"/>
+                        <ToggleButton id="toggleInfoToolbar"
+                            text="Hide/Show InfoToolbar"
+                            press="onToggleInfoToolbar" />
+                    </content>
+                </OverflowToolbar>
+            </headerToolbar>
+            <infoToolbar>
+                <OverflowToolbar>
+                    <Label text="Wide range of available products"/>
+                </OverflowToolbar>
+            </infoToolbar>
+            <columns>
+                <Column><Text text="추가" /></Column>
+                <Column><Text text="ProductNo" /></Column>
+                <Column><Text text="ProdectName" /></Column>
+                <Column><Text text="Price" /></Column>
+            </columns>
+            <items>
+                <ColumnListItem vAlign="Middle">
+                    <cells>
+                        <ObjectIdentifier title="{view>ProductNo}" text="{view>ProdectName}"/>
+                        <Text text="{view>ProductNo}" />
+                        <Text text="{view>ProdectName}" />
+                        <Text text="{view>price}" />
+                    </cells>
+                </ColumnListItem>
+            </items>
+        </Table>
+    </Page>
+</mvc:View>
+```
