--- a/RAP/5-1. FIORI 총정리.md
+++ b/RAP/5-1. FIORI 총정리.md
@@ -1992,9 +1992,9 @@ onPress: function(oEvent) {
 | 용어 | 의미 | 예시 |
 |------|------|------|
 | **Entity Set** | 여러 개의 데이터를 모아둔 데이터 집합 (즉, 하나의 테이블) | 예: **Orders** 테이블 |
-| **Entity** | Entity Set 안에 들어 있는 한 줄의 데이터 (레코드) | 예: 주문번호가 1001인 주문 데이터 |
-| **Property** | Entity 안에 포함된 각각의 필드 (열, 속성) | 예: OrderID, CustomerName, OrderDate |
-| **Entity Type** | Entity의 전체 구조와 필드 정의 (설계도, 스키마) | 예: Orders 테이블의 필드 구조 정의 |
+| **Entity** | Entity Set 안에 들어 있는 한 줄의 데이터 (레코드. Row 1건) | 예: 주문번호가 1001인 주문 데이터 |
+| **Property** | Entity 안에 포함된 각각의 필드 (Field 1개) | 예: OrderID, CustomerName, OrderDate |
+| **Entity Type** | Entity의 전체 구조와 필드 정의 (Structure) | 예: Orders 테이블의 필드 구조 정의 |
 </br>
 
 ### OData 요청 예시
