Update 1-4. 프로그래밍 코드 최적화(02.04).md

--- a/RAP/1-4. 프로그래밍 코드 최적화(02.04).md
+++ b/RAP/1-4. 프로그래밍 코드 최적화(02.04).md
@@ -20,7 +20,7 @@
 - Aggregation Binding 실습
 </br>
 
-- Main.controller.js
+### 1. Main.controller.js
 ```java
 sap.ui.define([
     "sap/ui/core/mvc/Controller",
@@ -70,7 +70,7 @@ sap.ui.define([
 ```
 </br>
 
-- Main.view.xml
+### 2. Main.view.xml
 ```html
 <mvc:View controllerName="test1.controller.Main"
     xmlns:mvc="sap.ui.core.mvc"
