--- a/RAP/1-4. 프로그래밍 코드 최적화(02.04).md
+++ b/RAP/1-4. 프로그래밍 코드 최적화(02.04).md
@@ -12,11 +12,13 @@
 </br>
 </br>
 
+**< OData EntitySet 조회 형식 차이 >**
 - `/<EntitySet>?$format=json` : 해당 EntitySet 데이터를 JSON 형식으로 조회
 ```
 https://port8080-workspaces-ws-vefo7.us10.trial.applicationstudio.cloud.sap/sap/opu/odata/sap/ZCODE_PERSON2_SRV/PersonSet?$format=json
 ```
 <img width="535" height="212" alt="image" src="https://github.com/user-attachments/assets/7aefd8dd-43d4-4607-8b8c-04aa2d760973" />
+</br>
 </br>
 
 - `/<EntitySet>` : 해당 EntitySet 데이터를 OData 기본 화면(XML/브라우저용)으로 조회
