--- a/RAP/1-4. 프로그래밍 코드 최적화(02.04).md
+++ b/RAP/1-4. 프로그래밍 코드 최적화(02.04).md
@@ -1,7 +1,7 @@
-## < FIORI 복습 >
+# < FIORI 복습 >
 </br>
 
-### 추가적인 개념 정리
+## < 추가적인 개념 정리 >
 </br>
 
 - `/` 붙이면 그대로 출력
@@ -12,7 +12,7 @@
 </br>
 </br>
 
-**< OData EntitySet 조회 형식 차이 >**
+### OData EntitySet 조회 형식 차이
 - `/<EntitySet>?$format=json` : 해당 EntitySet 데이터를 JSON 형식으로 조회
 ```
 https://port8080-workspaces-ws-vefo7.us10.trial.applicationstudio.cloud.sap/sap/opu/odata/sap/ZCODE_PERSON2_SRV/PersonSet?$format=json
