Update 1-4. 프로그래밍 코드 최적화(02.04).md

--- a/RAP/1-4. 프로그래밍 코드 최적화(02.04).md
+++ b/RAP/1-4. 프로그래밍 코드 최적화(02.04).md
@@ -22,6 +22,11 @@ https://port8080-workspaces-ws-vefo7.us10.trial.applicationstudio.cloud.sap/sap/
 </br>
 
 - `/<EntitySet>` : 해당 EntitySet 데이터를 OData 기본 화면(XML/브라우저용)으로 조회
+```
+https://port8080-workspaces-ws-vefo7.us10.trial.applicationstudio.cloud.sap/sap/opu/odata/sap/ZCODE_PERSON2_SRV/PersonSet
+```
+<img width="682" height="237" alt="image" src="https://github.com/user-attachments/assets/6042266a-b9f6-486a-8cae-b7658558bf3a" />
+
 </br>
 </br>
 
