Update 1-4. 프로그래밍 코드 최적화(02.04).md

--- a/RAP/1-4. 프로그래밍 코드 최적화(02.04).md
+++ b/RAP/1-4. 프로그래밍 코드 최적화(02.04).md
@@ -12,6 +12,10 @@
 </br>
 </br>
 
+### 1) Fiori OData 서비스 추가 연결
+</br>
+</br>
+
 ### 2) OData EntitySet 조회 형식 차이
 - `/<EntitySet>?$format=json` : 해당 EntitySet 데이터를 JSON 형식으로 조회
 ```
@@ -29,6 +33,8 @@ https://port8080-workspaces-ws-vefo7.us10.trial.applicationstudio.cloud.sap/sap/
 
 </br>
 </br>
+</br>
+</br>
 
 ---
 
@@ -40,6 +46,10 @@ https://port8080-workspaces-ws-vefo7.us10.trial.applicationstudio.cloud.sap/sap/
 ### 실습 1
 - `\` 붙이면 그대로 출력
 - Aggregation Binding 실습
+  
+<img width="501" height="328" alt="image" src="https://github.com/user-attachments/assets/8411027a-f7ec-48d2-87d4-0c345156380a" />
+</br>
+</br>
 </br>
 
 ### 1. Main.controller.js
