--- a/RAP/1-4. 프로그래밍 코드 최적화(02.04).md
+++ b/RAP/1-4. 프로그래밍 코드 최적화(02.04).md
@@ -1,4 +1,4 @@
-# < FIORI 복습 >
+<img width="456" height="231" alt="image" src="https://github.com/user-attachments/assets/24a931c6-6f28-4d89-8159-064e3d8c1bfb" /># < FIORI 복습 >
 </br>
 
 ## < 추가적인 개념 정리 >
@@ -13,6 +13,10 @@
 </br>
 
 ### 1) Fiori OData 서비스 추가 연결
+
+**1) `Open Application Info` 선택**
+<img width="456" height="231" alt="image" src="https://github.com/user-attachments/assets/991dca8c-b3db-474f-9fb9-6b78ff60de0c" />
+
 </br>
 </br>
 
