Update 1-4. 프로그래밍 코드 최적화(02.04).md

--- a/RAP/1-4. 프로그래밍 코드 최적화(02.04).md
+++ b/RAP/1-4. 프로그래밍 코드 최적화(02.04).md
@@ -1,4 +1,4 @@
-<img width="456" height="231" alt="image" src="https://github.com/user-attachments/assets/24a931c6-6f28-4d89-8159-064e3d8c1bfb" /># < FIORI 복습 >
+# < FIORI 복습 >
 </br>
 
 ## < 추가적인 개념 정리 >
