Update 1-4. 프로그래밍 코드 최적화(02.04).md

--- a/RAP/1-4. 프로그래밍 코드 최적화(02.04).md
+++ b/RAP/1-4. 프로그래밍 코드 최적화(02.04).md
@@ -18,7 +18,13 @@
 **1) `Open Application Info` 선택**
 
 <img width="456" height="231" alt="image" src="https://github.com/user-attachments/assets/991dca8c-b3db-474f-9fb9-6b78ff60de0c" />
+</br>
 
+**2) `Manage servic Models` 선택**
+
+<img width="589" height="242" alt="image" src="https://github.com/user-attachments/assets/af122b73-f236-4732-9570-b0614e449edd" />
+
+</br>
 </br>
 </br>
 
