Update 1-4. 프로그래밍 코드 최적화(02.04).md

--- a/RAP/1-4. 프로그래밍 코드 최적화(02.04).md
+++ b/RAP/1-4. 프로그래밍 코드 최적화(02.04).md
@@ -19,10 +19,17 @@
 
 <img width="456" height="231" alt="image" src="https://github.com/user-attachments/assets/991dca8c-b3db-474f-9fb9-6b78ff60de0c" />
 </br>
+</br>
 
-**2) `Manage servic Models` 선택**
+**2) `Manage service Models` 선택**
 
 <img width="589" height="242" alt="image" src="https://github.com/user-attachments/assets/af122b73-f236-4732-9570-b0614e449edd" />
+</br>
+</br>
+
+**3) oData 생성**
+
+<img width="599" height="350" alt="image" src="https://github.com/user-attachments/assets/3feda1a1-2a86-4d70-ad4d-7d23b56b4500" />
 
 </br>
 </br>
