Update 1-4. 프로그래밍 코드 최적화(02.04).md

--- a/RAP/1-4. 프로그래밍 코드 최적화(02.04).md
+++ b/RAP/1-4. 프로그래밍 코드 최적화(02.04).md
@@ -27,7 +27,7 @@
 </br>
 </br>
 
-**3) oData 생성**
+**3) `oData` 생성**
 
 <img width="599" height="350" alt="image" src="https://github.com/user-attachments/assets/3feda1a1-2a86-4d70-ad4d-7d23b56b4500" />
 
