Update 1-4. 프로그래밍 코드 최적화(02.04).md

--- a/RAP/1-4. 프로그래밍 코드 최적화(02.04).md
+++ b/RAP/1-4. 프로그래밍 코드 최적화(02.04).md
@@ -69,7 +69,8 @@ https://port8080-workspaces-ws-vefo7.us10.trial.applicationstudio.cloud.sap/sap/
 - `\` 붙이면 그대로 출력
 - Aggregation Binding 실습
   
-<img width="501" height="328" alt="image" src="https://github.com/user-attachments/assets/8411027a-f7ec-48d2-87d4-0c345156380a" />
+<img width="610" height="253" alt="image" src="https://github.com/user-attachments/assets/4ae09177-4afa-46a9-a646-ee25f74ec895" />
+
 </br>
 </br>
 </br>
@@ -204,4 +205,116 @@ sap.ui.define([
 </br>
 
 ### 실습 2
-- oData 추가해서 바인딩 연
+- oData 추가해서 바인딩 실습
+- items="{ZCODE_PERSON2_SRV>/PersonSet}" 처럼 바인딩할 때 `/PersonSet` 은 반드시 `EntitySet` 으로 지정
+- 실습 1 코드에서 `view.xml` 파일만 수정
+
+<img width="536" height="348" alt="image" src="https://github.com/user-attachments/assets/03c5a025-3012-41e6-9c36-abb770ca719e" />
+
+</br>
+</br>
+</br>
+
+- `manifest.json` 파일에서 모델 생성 확인
+<img width="373" height="169" alt="image" src="https://github.com/user-attachments/assets/27bbe5be-ded2-42b3-8fc1-23c46f5879ba" />
+</br>
+</br>
+
+### 1. Main.view.xml
+```html
+<mvc:View controllerName="test1.controller.Main"
+    xmlns:mvc="sap.ui.core.mvc"
+    xmlns:core="sap.ui.core"
+    xmlns:l = "sap.ui.layout"
+    xmlns="sap.m">
+    <Page id="page" title="{i18n>title}">
+        <l:Grid containerQuery="true" 
+                class="sapUiSmallMargin"
+                defaultSpan="XL3 L4 M4 S12">
+                <Input value="{view>/name/FirstName}" description="\{view>/name/FirstName}"/>
+                <Input value="{view>/name/LastName}" description="\{view>/name/LastName}"/>
+                <Input value="{view>/age}" description="\{view>/age}"/>
+                <Input value="{view>/salary}" description="\{view>/salary}"/>
+        </l:Grid>
+
+        <!-- sap.m.table 추가 -->
+        <Table id="idPersonTable"
+            inset="false"
+            items="{ZCODE_PERSON2_SRV>/PersonSet}">
+            <headerToolbar>
+                <OverflowToolbar>
+                    <content>
+                        <Title text="Person" level="H2"/>
+                    </content>
+                </OverflowToolbar>
+            </headerToolbar>
+            <infoToolbar>
+                <OverflowToolbar>
+                    <Label text="Person"/>
+                </OverflowToolbar>
+            </infoToolbar>
+            <columns>
+                <Column><Text text="Perno" /></Column>
+                <Column><Text text="Name" /></Column>
+                <Column><Text text="Memo" /></Column>
+            </columns>
+            <items>
+                <ColumnListItem vAlign="Middle">
+                    <cells>
+                        <Text text="{ZCODE_PERSON2_SRV>Perno}" />
+                        <ObjectIdentifier title="{ZCODE_PERSON2_SRV>Firstname}" text="{ZCODE_PERSON2_SRV>Lastname}"/>
+                        <Text text="{ZCODE_PERSON2_SRV>Memo}" />
+                    </cells>
+                </ColumnListItem>
+            </items>
+        </Table>
+
+        <Table id="idProductsTable"
+            inset="false"
+            items="{/Carriers}">
+            <headerToolbar>
+                <OverflowToolbar>
+                    <content>
+                        <Title text="Products" level="H2"/>
+                        <ToolbarSpacer />
+                        <ComboBox id="idPopinLayout"
+                            placeholder="Popin layout options"
+                            change="onPopinLayoutChanged"
+                            items="{view>/Combo}">
+                            <items>
+                                <core:Item  text="{view>text}" key="{view>key}"/>
+                            </items>
+                        </ComboBox>
+                        <Label text="Sticky options:" />
+                        <CheckBox text="ColumnHeaders" select="onSelect"/>
+                        <CheckBox text="HeaderToolbar" select="onSelect"/>
+                        <CheckBox text="InfoToolbar" select="onSelect"/>
+                        <ToggleButton id="toggleInfoToolbar" text="Hide/Show InfoToolbar" press="onToggleInfoToolbar" />
+                    </content>
+                </OverflowToolbar>
+            </headerToolbar>
+            <infoToolbar>
+                <OverflowToolbar>
+                    <Label text="Wide range of available products"/>
+                </OverflowToolbar>
+            </infoToolbar>
+            <columns>
+                <Column><Text text="Carrid" /></Column>
+                <Column><Text text="Carrname" /></Column>
+                <Column><Text text="Currcode" /></Column>
+                <Column><Text text="Url" /></Column>
+            </columns>
+            <items>
+                <ColumnListItem vAlign="Middle">
+                    <cells>
+                        <Text text="{Carrid}" />
+                        <Text text="{Carrname}" />
+                        <Text text="{Currcode}" />
+                        <Text text="{Url}" />
+                    </cells>
+                </ColumnListItem>
+            </items>
+        </Table>
+    </Page>
+</mvc:View>
+```
