Update 1-4. 프로그래밍 코드 최적화(02.04).md

--- a/RAP/1-4. 프로그래밍 코드 최적화(02.04).md
+++ b/RAP/1-4. 프로그래밍 코드 최적화(02.04).md
@@ -214,13 +214,14 @@ sap.ui.define([
 </br>
 </br>
 </br>
+</br>
 
-- `manifest.json` 파일에서 모델 생성 확인
+### 1. `manifest.json` 파일에서 모델 생성 확인
 <img width="373" height="169" alt="image" src="https://github.com/user-attachments/assets/27bbe5be-ded2-42b3-8fc1-23c46f5879ba" />
 </br>
 </br>
 
-### 1. Main.view.xml
+### 2. Main.view.xml
 ```html
 <mvc:View controllerName="test1.controller.Main"
     xmlns:mvc="sap.ui.core.mvc"
