Update 1-4. 프로그래밍 코드 최적화(02.04).md

--- a/RAP/1-4. 프로그래밍 코드 최적화(02.04).md
+++ b/RAP/1-4. 프로그래밍 코드 최적화(02.04).md
@@ -1,6 +1,22 @@
 # < FIORI 복습 >
 </br>
 
+## <  핵심 개념 >
+- **1) `FIELD-SYMBOLS`**
+- **2) `FIELD-SYMBOL CASTING` (타입 캐스팅)**
+- **3) `Dynamic ASSIGN` 을 이용한 데이터·구조·속성 접근 방식**
+- **4) New Open SQL 인라인 선언 형식 (`@DATA` 사용)**
+- **5) 동적 Field Catalog 설정 (`FIELD-SYMBOL` 활용)**
+- **6) 엑셀 업로드 표준 형식 (row/col 기반 내부테이블 구성)**
+- **7) Simple Tree 생성 및 노드 구성**
+</br>
+</br>
+
+---
+
+</br>
+
+
 ## < 추가적인 개념 정리 >
 </br>
 
