Update 1-4. 프로그래밍 코드 최적화(02.04).md

--- a/RAP/1-4. 프로그래밍 코드 최적화(02.04).md
+++ b/RAP/1-4. 프로그래밍 코드 최적화(02.04).md
@@ -2,13 +2,7 @@
 </br>
 
 ## <  핵심 개념 >
-- **1) `FIELD-SYMBOLS`**
-- **2) `FIELD-SYMBOL CASTING` (타입 캐스팅)**
-- **3) `Dynamic ASSIGN` 을 이용한 데이터·구조·속성 접근 방식**
-- **4) New Open SQL 인라인 선언 형식 (`@DATA` 사용)**
-- **5) 동적 Field Catalog 설정 (`FIELD-SYMBOL` 활용)**
-- **6) 엑셀 업로드 표준 형식 (row/col 기반 내부테이블 구성)**
-- **7) Simple Tree 생성 및 노드 구성**
+- **1) `items="{ZCODE_PERSON2_SRV>/PersonSet}"` 처럼 바인딩할 때 `/PersonSet` 은 반드시 `EntitySet` 으로 지정**
 </br>
 </br>
 
@@ -222,7 +216,7 @@ sap.ui.define([
 
 ### 실습 2
 - oData 추가해서 바인딩 실습
-- items="{ZCODE_PERSON2_SRV>/PersonSet}" 처럼 바인딩할 때 `/PersonSet` 은 반드시 `EntitySet` 으로 지정
+- `items="{ZCODE_PERSON2_SRV>/PersonSet}"` 처럼 바인딩할 때 `/PersonSet` 은 반드시 `EntitySet` 으로 지정
 - 실습 1 코드에서 `view.xml` 파일만 수정
 
 <img width="536" height="348" alt="image" src="https://github.com/user-attachments/assets/03c5a025-3012-41e6-9c36-abb770ca719e" />
