--- a/RAP/1-4. 프로그래밍 코드 최적화(02.04).md
+++ b/RAP/1-4. 프로그래밍 코드 최적화(02.04).md
@@ -1,6 +1,7 @@
 ## <  핵심 개념 >
 - **1) `items="{ZCODE_PERSON2_SRV>/PersonSet}"` 처럼 바인딩할 때 `/PersonSet` 은 반드시 `EntitySet` 으로 지정**
 - **2) `\n` : 줄바꿈**
+- **3) `<ToolbarSpacer />` : 버튼 끝에 추가**
 </br>
 </br>
 
