--- a/RAP/1-4. 프로그래밍 코드 최적화(02.04).md
+++ b/RAP/1-4. 프로그래밍 코드 최적화(02.04).md
@@ -331,3 +331,10 @@ sap.ui.define([
     </Page>
 </mvc:View>
 ```
+</br>
+</br>
+</br>
+
+### 실습 3
+- `getProperty` 와 `getData` 이용 실습
+<img width="376" height="217" alt="image" src="https://github.com/user-attachments/assets/49bdb5f6-870a-4870-8230-df640d1caa0d" />
