--- a/RAP/1-4. 프로그래밍 코드 최적화(02.04).md
+++ b/RAP/1-4. 프로그래밍 코드 최적화(02.04).md
@@ -337,6 +337,16 @@ sap.ui.define([
 
 ### 실습 3
 - `getProperty` 와 `getData` 이용 실습
+- 버튼 클릭시 입력한 값이 출력
 </br>
 
 <img width="376" height="217" alt="image" src="https://github.com/user-attachments/assets/49bdb5f6-870a-4870-8230-df640d1caa0d" />
+</br>
+
+<img width="251" height="135" alt="image" src="https://github.com/user-attachments/assets/0783d8c9-f002-402e-acd9-1f2a185721de" />
+
+</br>
+</br>
+</br>
+
+### 1. Main.controller.js
