--- a/RAP/1-4. 프로그래밍 코드 최적화(02.04).md
+++ b/RAP/1-4. 프로그래밍 코드 최적화(02.04).md
@@ -338,6 +338,7 @@ sap.ui.define([
 ### 실습 3
 - `getProperty` 와 `getData` 이용 실습
 - 버튼 클릭시 입력한 값이 출력
+- 실습 1 코드에서 `controller.js` 파일만 수정
 </br>
 
 <img width="376" height="217" alt="image" src="https://github.com/user-attachments/assets/49bdb5f6-870a-4870-8230-df640d1caa0d" />
@@ -350,3 +351,62 @@ sap.ui.define([
 </br>
 
 ### 1. Main.controller.js
+```java
+sap.ui.define([
+    "sap/ui/core/mvc/Controller",
+    "sap/ui/model/json/JSONModel"   // 사용할 라이브러리 추가
+], (Controller, JSONModel) => {
+    "use strict";
+
+    return Controller.extend("test1.controller.Main", {
+        onInit() {
+            let oModel = this.getOwnerComponent().getModel(); // 기본 (빈문자열) 모델을 가져옴
+            let oMainModel = this.getOwnerComponent().getModel("main"); // main 모델을 가져옴
+
+            // 해당 라인에서 디버깅이 실행됨. 단, 개발자도구가 켜져있는 상태여야 함
+            // debugger; 
+
+            let oData = {
+                name : { 
+                    FirstName : "홍", 
+                    LastName : "길동"
+                 },
+                age : 30,
+                salary : "4000만원",
+                list : [
+                    { ProductNo : "P001", ProdectName : "책상", price : 10000 },
+                    { ProductNo : "P002", ProdectName : "키보드", price : 5000 },
+                    { ProductNo : "P003", ProdectName : "물티슈", price : 1000 },
+                    { ProductNo : "P004", ProdectName : "의자", price :30000 }
+                ],
+                Combo : [
+                    { text : "Block", key : "Block" },
+                    { text : "Grid Large", key : "GridLarge" },
+                    { text : "Grid Small", key : "GridSmall" }
+                ]
+            };
+            let oJSONModel = new JSONModel(oData);
+            // 모델 이름 생략 시 빈 문자열
+            // 기존에 기본모델이 존재한다면 해당 모델을 덮어씀
+            // 따라서 모델 이름을 부여해서 각 모델을 구분할 수 있도록 함
+            // this.getView().setModel(모델객체, 모델이름); 
+            this.getView().setModel(oJSONModel, "view"); 
+
+            // 모델에 들어있는 데이터를 화면에 표시하기 위해서
+            // "바인딩(Binding)" 이라는 것을 사용
+            // 기본 문법
+            // <tag name="{모델이름>/경로}" />  모델 이름이 있는 경우
+            // <tag name="{/경로}" />           모델 이름이 없는 경우(기본)
+            // 경로는 JSON 객체의 key 값으로 접근
+            // => {모델이름>/key1/key2} 와 같이 하위로 내려갈 수 있음
+        },
+        onPress: function () {
+            let oModel = this.getView().getModel("view");
+            let str = "이름: " + oModel.getProperty("/name/FirstName") + oModel.getProperty("/name/LastName") + "\n" +
+                        "나이: " + oModel.getProperty("/age") + "\n" +
+                        "연봉: " + oModel.getProperty("/salary");
+            console.log(str);
+        }
+    });
+});
+```
