Update 1-4. 프로그래밍 코드 최적화(02.04).md

--- a/RAP/1-4. 프로그래밍 코드 최적화(02.04).md
+++ b/RAP/1-4. 프로그래밍 코드 최적화(02.04).md
@@ -405,7 +405,7 @@ sap.ui.define([
             let str = "이름: " + oModel.getProperty("/name/FirstName") + oModel.getProperty("/name/LastName") + "\n" +
                         "나이: " + oModel.getProperty("/age") + "\n" +
                         "연봉: " + oModel.getProperty("/salary");
-            console.log(str);
+            sap.m.MessageBox.information(str);
         }
     });
 });
