Update 1-4. 프로그래밍 코드 최적화(02.04).md

--- a/RAP/1-4. 프로그래밍 코드 최적화(02.04).md
+++ b/RAP/1-4. 프로그래밍 코드 최적화(02.04).md
@@ -402,10 +402,12 @@ sap.ui.define([
         },
         onPress: function () {
             let oModel = this.getView().getModel("view");
-            let str = "이름: " + oModel.getProperty("/name/FirstName") + oModel.getProperty("/name/LastName") + "\n" +
-                        "나이: " + oModel.getProperty("/age") + "\n" +
-                        "연봉: " + oModel.getProperty("/salary");
-            sap.m.MessageBox.information(str);
+            let oData = oModel.getProperty("/");            // oModel.getData();
+            sap.m.MessageBox.information(
+                `이름:  ${oData.name.FirstName}${oData.name.LastName} 
+                나이:  ${oData.age} 
+                연봉:  ${oData.salary}`
+            );
         }
     });
 });
