Update 1-4. 프로그래밍 코드 최적화(02.04).md

--- a/RAP/1-4. 프로그래밍 코드 최적화(02.04).md
+++ b/RAP/1-4. 프로그래밍 코드 최적화(02.04).md
@@ -350,7 +350,47 @@ sap.ui.define([
 </br>
 </br>
 
-### 1. Main.controller.js
+### 1. Main.view.xml
+```html
+<Table id="idProductsTable"
+    inset="false"
+    items="{/Carriers}">
+    <headerToolbar>
+        <OverflowToolbar>
+            <content>
+                <Title text="Products" level="H2"/>
+                <ToolbarSpacer />
+                <Button text="버튼" press="onPress" />
+            </content>
+        </OverflowToolbar>
+    </headerToolbar>
+    <infoToolbar>
+        <OverflowToolbar>
+            <Label text="Wide range of available products"/>
+        </OverflowToolbar>
+    </infoToolbar>
+    <columns>
+        <Column><Text text="Carrid" /></Column>
+        <Column><Text text="Carrname" /></Column>
+        <Column><Text text="Currcode" /></Column>
+        <Column><Text text="Url" /></Column>
+    </columns>
+    <items>
+        <ColumnListItem vAlign="Middle">
+            <cells>
+                <Text text="{Carrid}" />
+                <Text text="{Carrname}" />
+                <Text text="{Currcode}" />
+                <Text text="{Url}" />
+            </cells>
+        </ColumnListItem>
+    </items>
+</Table>
+```
+</br>
+</br>
+
+### 2. Main.controller.js
 ```java
 sap.ui.define([
     "sap/ui/core/mvc/Controller",
