Update 1-4. 프로그래밍 코드 최적화(02.04).md

--- a/RAP/1-4. 프로그래밍 코드 최적화(02.04).md
+++ b/RAP/1-4. 프로그래밍 코드 최적화(02.04).md
@@ -2,6 +2,7 @@
 - **1) `items="{ZCODE_PERSON2_SRV>/PersonSet}"` 처럼 바인딩할 때 `/PersonSet` 은 반드시 `EntitySet` 으로 지정**
 - **2) `\n` : 줄바꿈**
 - **3) `<ToolbarSpacer />` : 버튼 끝에 추가**
+- **4) `Ctrl + Space` : 함수 자동완성 단축**
 </br>
 </br>
 
@@ -392,63 +393,20 @@ sap.ui.define([
 
 ### 2. Main.controller.js
 ```java
-sap.ui.define([
-    "sap/ui/core/mvc/Controller",
-    "sap/ui/model/json/JSONModel"   // 사용할 라이브러리 추가
-], (Controller, JSONModel) => {
-    "use strict";
-
-    return Controller.extend("test1.controller.Main", {
-        onInit() {
-            let oModel = this.getOwnerComponent().getModel(); // 기본 (빈문자열) 모델을 가져옴
-            let oMainModel = this.getOwnerComponent().getModel("main"); // main 모델을 가져옴
-
-            // 해당 라인에서 디버깅이 실행됨. 단, 개발자도구가 켜져있는 상태여야 함
-            // debugger; 
-
-            let oData = {
-                name : { 
-                    FirstName : "홍", 
-                    LastName : "길동"
-                 },
-                age : 30,
-                salary : "4000만원",
-                list : [
-                    { ProductNo : "P001", ProdectName : "책상", price : 10000 },
-                    { ProductNo : "P002", ProdectName : "키보드", price : 5000 },
-                    { ProductNo : "P003", ProdectName : "물티슈", price : 1000 },
-                    { ProductNo : "P004", ProdectName : "의자", price :30000 }
-                ],
-                Combo : [
-                    { text : "Block", key : "Block" },
-                    { text : "Grid Large", key : "GridLarge" },
-                    { text : "Grid Small", key : "GridSmall" }
-                ]
-            };
-            let oJSONModel = new JSONModel(oData);
-            // 모델 이름 생략 시 빈 문자열
-            // 기존에 기본모델이 존재한다면 해당 모델을 덮어씀
-            // 따라서 모델 이름을 부여해서 각 모델을 구분할 수 있도록 함
-            // this.getView().setModel(모델객체, 모델이름); 
-            this.getView().setModel(oJSONModel, "view"); 
-
-            // 모델에 들어있는 데이터를 화면에 표시하기 위해서
-            // "바인딩(Binding)" 이라는 것을 사용
-            // 기본 문법
-            // <tag name="{모델이름>/경로}" />  모델 이름이 있는 경우
-            // <tag name="{/경로}" />           모델 이름이 없는 경우(기본)
-            // 경로는 JSON 객체의 key 값으로 접근
-            // => {모델이름>/key1/key2} 와 같이 하위로 내려갈 수 있음
-        },
-        onPress: function () {
-            let oModel = this.getView().getModel("view");
-            let oData = oModel.getProperty("/");            // oModel.getData();
-            sap.m.MessageBox.information(
-                `이름:  ${oData.name.FirstName}${oData.name.LastName} 
-                나이:  ${oData.age} 
-                연봉:  ${oData.salary}`
-            );
-        }
-    });
-});
+onPress: function () {
+    let oModel = this.getView().getModel("view");
+    let oData = oModel.getProperty("/");            // oModel.getData();
+    sap.m.MessageBox.information(
+        `이름:  ${oData.name.FirstName}${oData.name.LastName} 
+        나이:  ${oData.age} 
+        연봉:  ${oData.salary}`
+    );
+}
 ```
+</br>
+</br>
+</br>
+
+### 실습 4
+- Table row 클릭시 해당 row의 데이터 가져오기 실습
+- getBinding 이용
