Update 1-5. 프로그래밍 코드 최적화(02.05).md

--- a/RAP/1-5. 프로그래밍 코드 최적화(02.05).md
+++ b/RAP/1-5. 프로그래밍 코드 최적화(02.05).md
@@ -1,1 +1,22 @@
+## <  핵심 개념 >
+- **1) `items="{ZCODE_PERSON2_SRV>/PersonSet}"` 처럼 바인딩할 때 `/PersonSet` 은 반드시 `EntitySet` 으로 지정**
+- **2) `\n` : 줄바꿈**
+- **3) `<ToolbarSpacer />` : 버튼 끝에 추가**
+- **4) `Ctrl + Space` : 함수 자동완성 단축**
+</br>
+</br>
 
+---
+
+</br>
+
+## < FIORI 함수 >
+</br>
+
+### 1) 컨트롤러 한정 전역 변수
+- 해당 컨트롤러 내부에서는 전역처럼 사용
+- 다른 컨트롤러에서는 접근 불가
+```java
+this._oPersonModel = this.getOwnerComponent().getModel();
+```
+</br>
